--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+{
     padding: 0;
     margin: 0;
 }
@@ -47,8 +47,8 @@ html{
     
 }
 .tracking-in-expand {
-	-webkit-animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    -webkit-animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+            animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
  @-webkit-keyframes tracking-in-expand {
     0% {
@@ -76,12 +76,13 @@ html{
   }
 #home{
    height: 370px;
-   background-image: url("https://camo.githubusercontent.com/19db51af5f90f1b152bc0b9078f5fe97053955be5074f03f17019c70345bdcdb/68747470733a2f2f6d69726f2e6d656469756d2e636f6d2f6d61782f313336302f302a37513379765349765f7430696f4a2d5a2e676966");
    background-repeat: no-repeat;
-   background-size:45%;
-   background-position:90% 20%;
+   background-size:20%;
+   background-position:100% 20%;
    border: none;
 }
+
+
 
 #home-info{
     position: absolute;
@@ -91,13 +92,14 @@ html{
     font-size: 25px;
     margin-top: 50px;
     margin-left: 50px;
+    text-align: justify-all;
 }
 .info{
     font-weight: bolder;
     color: lightslategray;
 }
 .designation{
-    color: royalblue;
+    color: grey;
     font-size: 25px;
     font-weight: bolder;
 }
@@ -122,4 +124,156 @@ html{
     border: 3px solid royalblue;
    
     transform: scale(1.1);
+}
+.about-section{
+    height: 500px;
+    width: 100%;
+    background-color: whitesmoke;
+}
+.aboutmain{
+    height: 500px;
+    width:100%;
+    display: flex;
+    font-size: 25px;
+    font-family: sans-serif;
+    font-weight: bolder;
+}
+.aboutmain div{
+    height: 500px;
+    width:100%;
+}
+.minion{
+    margin-top: 70px;
+    margin-left: 100px;
+  width: 70%;
+  height:70%;
+    animation-duration: 4s;
+    animation-name: zoom;
+    animation-iteration-count: 1;
+}
+@keyframes zoom{
+    100%{
+        transform: scale(1.2);
+        border-radius: 60px;
+    }
+}
+.heading{
+    font-family: Arial black;
+    text-align: center;
+    margin: 30px 0px;
+    font-size: 40px;
+    color: royalblue;   
+}
+.carrerobj{
+    padding: 30px;
+}
+.carrerinfo{
+    text-align: justify;
+    line-height: 40px;
+    text-indent: 100px;
+    word-spacing: 7px;
+    letter-spacing: 1px;
+}
+ #skills{
+  height: 550px;
+  width: 100%;
+  background-color: white;
+
+}
+.tb1{
+  margin-left: 5%;
+
+}
+.tb1 tr td{
+  padding: 40px;
+  border-radius: 10px;
+  transition-duration: 1.5s;
+}
+.skills-subheading{
+  color: orangered;
+  font-family:sans-serif ;
+  font-weight: bolder;
+  font-size: 25px;
+  font-variant: small-caps;
+}
+.detailedskills{
+  font-size: 23px;
+  font-weight: bolder;
+  color: rgb(109, 101, 101);
+  line-height:40px ;
+  word-spacing: 3px;
+  margin-top: 20px;
+}
+
+.card-title{
+  font-weight: bolder;
+  font-family: sans-serif;
+  font-variant: small-caps;
+  align-content: center;
+  color: orangered;
+}
+.card-text{
+   color: rgb(109, 101, 101);
+   align-content: justify;
+   font-family: sans-serif;
+}
+#project{
+  height: 1500px;
+}
+
+#contact {
+  height: 500px;
+  width: 100%;
+  background-color: white;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.contact-info,
+.contact-form {
+  flex: 1;
+  padding: 20px;
+}
+
+.contact-info h2,
+.contact-form h2 {
+  font-size: 30px;
+  color: royalblue;
+  margin-bottom: 20px;
+}
+
+.contact-info table {
+  width: 100%;
+}
+
+.contact-info table td {
+  padding: 10px 0;
+}
+
+.contact-form .form-group {
+  margin-bottom: 20px;
+}
+
+.contact-form button {
+  width: 150px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 10px;
+  background-color: royalblue;
+  color: white;
+  border: none;
+  transition-duration: 0.5s;
+}
+
+.contact-form button:hover {
+  background-color: white;
+  color: royalblue;
+  border: 2px solid royalblue;
+  transform: scale(1.1);
 }
