--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
-{
+*{
+  
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+}
+
+body 
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #000;
+  background: url("https://img.freepik.com/free-photo/flat-lay-workstation-with-copy-space-laptop_23-2148430879.jpg?size=626&ext=jpg&ga=GA1.1.955072278.1713081465&semt=ais");
+  background-repeat: no-repeat;
+  background-size: 100%;  
+  
 }
 .portfolio-sections{
     height: 400px;
     width: 100%;
     border: 2px solid black;
    
-    background-color: white;
+   background-color: blue;
 }
 .navigation-bar{
     position: fixed;
@@ -221,59 +237,27 @@ html{
   height: 1500px;
 }
 
+/* social media icons styling */
+.social-icons {
+  font-size: 36px;
+  cursor: pointer;
+}
+.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
+  color: #008000;
+}
+.fab {
+  color: #000000;
+}
+/* footer styling */
+#footer {
+  background-color: #808080;
+  text-align: center;
+}
+/* spacing on all sections */
+#about, #services, #portfolio, #contact {
+  margin-top: 4rem;
+  padding-top: 4rem;
+}
 #contact {
-  height: 500px;
-  width: 100%;
-  background-color: white;
-}
-
-.contact-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.contact-info,
-.contact-form {
-  flex: 1;
-  padding: 20px;
-}
-
-.contact-info h2,
-.contact-form h2 {
-  font-size: 30px;
-  color: royalblue;
-  margin-bottom: 20px;
-}
-
-.contact-info table {
-  width: 100%;
-}
-
-.contact-info table td {
-  padding: 10px 0;
-}
-
-.contact-form .form-group {
-  margin-bottom: 20px;
-}
-
-.contact-form button {
-  width: 150px;
-  height: 50px;
-  font-size: 20px;
-  font-weight: bold;
-  border-radius: 10px;
-  background-color: royalblue;
-  color: white;
-  border: none;
-  transition-duration: 0.5s;
-}
-
-.contact-form button:hover {
-  background-color: white;
-  color: royalblue;
-  border: 2px solid royalblue;
-  transform: scale(1.1);
+  padding-bottom: 4rem;
 }
