--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ html{
     border-radius: 10px;
     font-size:15px;
     font-weight: bolder;
-    background-color: royalblue;
-    color: white;
+    background-color: white;
+    color: black;
     transition-duration: 1s;
 }
 .rsmbtn:hover{
